# effrai.github.io

./: Cargo.toml  index.html  publish.sh  todo
.github/workflows/: rust.yml
src/: main.rs  oma_helpers.rs
src/script/: main.js
src/templates/: Activités_locales.html  Animation_connexion.html  Animation_reseau.html  Boulangerie_ile.html  Cards_brochure.html  Communiqués.html  Critique_du_Parti.html  Description_liaison_radio.html  Jeu_Arago_FA_Lyon.html  Musiques_radio.html  Proposition_10_sept.html  Section_accueil.html  TDS_FA_Lyon.html  Tout_sur_la_Radio.html  Trans_FA_Lyon.html  base.html  carte.html  episode.html  episode_index.html  episodes_serie.html  index.html  last_episodes.html  last_podcasts.html  last_series.html  list_series.html  macros.html  page.html  programme.html  serie.html  serie_index.html  single_episode.html  single_serie.html  style.css  Événements.html
src/templates/communiques/: Rojava_assiege.html
src/templates/img/: RadioDemo-LogoV1.webpL  cropped-favicon-4-t-360x360.png~  cropped-favicon-4-t-384x384.png~  cropped-favicon-4-t-64x64.png~
