[package]
name = "website2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "=4.4.18", features = ["derive","env"] }
# added to fit rustc 1.71.1 compatibility
bstr = { version = "=1.10.0"}
# end
serde_yml = "0.0.12"
custom_error = "1.9.2"
chrono = { version = "0.4.39", features = ["unstable-locales"] }
serde_json = "1.0.142"
regex = "1.11.1"
itertools = "0.14.0"

[profile.release]
opt-level = 3     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
